# discordcodex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-entrypoint.sh  pyproject.toml
config/: projects.example.json
docs/: SPEC.md
docs/superpowers/plans/: 2026-04-11-discordcodex-v1.md
src/discordcodex/: __init__.py  bot.py  cli.py  codex_runner.py  config.py  discord_output.py  github_provisioning.py  guide_store.py  locks.py  logging_store.py  prompt.py  session_store.py
tests/: test_bot.py  test_codex_runner.py  test_config.py  test_discord_output.py  test_docker_entrypoint.py  test_dockerfile.py  test_github_provisioning.py  test_guide_store.py  test_logging_store.py  test_prompt.py  test_public_share.py  test_session_store.py
