[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "discordcodex"
version = "0.1.0"
description = "Route Discord project channel messages to local Codex CLI runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4,<3",
]

[project.scripts]
discordcodex = "discordcodex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
